--- a/package.json
+++ b/package.json
@@ -72,17 +72,13 @@
     "bn.js": "5.2.2",
     "bs58": "6.0.0",
     "chronik-client": "0.19.0",
-    "dotenv": "17.2.3",
-    "dotenv-cli": "8.0.0",
-    "elliptic": "^6.6.1",
-    "validator": "13.15.20"
+    "elliptic": "^6.6.1"
   },
   "devDependencies": {
     "@types/bn.js": "5.2.0",
     "@types/bs58": "4.0.4",
     "@types/elliptic": "6.4.18",
     "@types/node": "24.0.10",
-    "@types/validator": "13.15.4",
     "prettier": "3.6.2",
     "tsx": "^4.21.0",
     "typescript": "5.8.3",
