--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,34 @@
-#**/submodules/**/*
-**/lib/nng-interface/**
-**/*.js
+# Dependencies
+node_modules/
+dist/
+
+# Build outputs
+*.js
+*.d.ts
+*.js.map
+
+# Generated files
 **/*.fbs
-#**/*.json
-**/*.jsonc
-!**/tsconfig.json
+**/lib/nng-interface/**
+
+# Test files
+coverage/
+.nyc_output/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Submodules
+**/submodules/**/*
