--- a/package.json
+++ b/package.json
@@ -40,10 +40,17 @@
   },
   "scripts": {
     "build": "tsc",
+    "build:watch": "tsc --watch",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "prepublishOnly": "npm run build",
     "version": "npm run build",
-    "postversion": "git push && git push --tags",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postversion": "git push && git push --tags"
   },
   "engines": {
     "node": ">=22.0.0"
@@ -74,11 +81,15 @@
     "elliptic": "^6.6.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@types/bn.js": "5.2.0",
     "@types/bs58": "4.0.4",
     "@types/elliptic": "6.4.18",
+    "@types/jest": "^29.5.0",
     "@types/node": "24.0.10",
+    "jest": "^29.7.0",
     "prettier": "3.6.2",
+    "ts-jest": "^29.1.0",
     "tsx": "^4.21.0",
     "typescript": "5.8.3",
     "typescript-eslint": "8.47.0"
