--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "module": "Node16",
-    "moduleResolution": "node16",
+    "module": "es2022",
+    "moduleResolution": "node10",
     "target": "ES2022",
     "lib": ["ES2023", "DOM"]
   }
